# wdp131-rust-examples

./: README.md
chapter1/first-project/: Cargo.toml
chapter2/second-project/: Cargo.toml
chapter2/second-project/src/: main.rs
chapter2/third-project/: Cargo.toml  Makefile.toml
chapter2/third-project/src/: main.rs
chapter3/actix-web-blog/: Cargo.toml  Makefile.toml
chapter3/actix-web-blog/migrations/2022-09-04-072816_create_posts/: up.sql
chapter3/actix-web-blog/src/: error.rs  main.rs  repository.rs
chapter3/actix-web-hello/: Cargo.toml
chapter3/actix-web-hello-serde/: Cargo.toml
chapter3/actix-web-hello-serde/src/: main.rs
chapter3/actix-web-hello/src/: main.rs
chapter4/lambda-s3event/: Cargo.toml  rustfmt.toml
chapter4/lambda-s3event/src/: main.rs
chapter4/pyo3-example/: Cargo.toml  fib.py  pyproject.toml
chapter4/pyo3-example/src/: lib.rs
chapter5/yew-blog/: Cargo.toml
chapter5/yew-blog/src/: main.rs
chapter5/yew-hello/: Cargo.toml  index.html
extra/actix-web-blog-extra/: .env  Makefile.toml
extra/actix-web-blog-extra/src/: error.rs  main.rs  repository.rs  types.rs
